typescript/checker/tests/conformance/es2017/useObjectValuesAndEntries4.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            139,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries4.ts:10:21
   |
10 | var entries = Object.entries(o);
   |                     ^^^^^^^^

